@@ -1,0 +1,57 @@
+<!--
+  ~ This file is part of Doodle Android.
+  ~
+  ~ Doodle Android is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ Doodle Android is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with Doodle Android. If not, see <http://www.gnu.org/licenses/>.
+  ~
+  ~ Copyright (c) 2019-2022 by Patrick Zedler
+  -->
+
+<vector
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:width="24dp"
+  android:height="24dp"
+  android:viewportWidth="24"
+  android:viewportHeight="24">
+  <path
+    android:pathData="M0,0h24v24h-24z"
+    android:strokeLineJoin="round"
+    android:strokeWidth="6.586"
+    android:fillColor="#f3e3cc"
+    android:strokeColor="#00000000"
+    android:strokeLineCap="round" />
+  <path
+    android:pathData="M0,0v24h6.422c0.17,-0.399 0.32,-0.806 0.469,-1.213 0.57,-1.617 0.968,-3.302 1.097,-5.014a9.656,9.656 0,0 0,-0.013 -0.841c-0.011,-0.227 -0.02,-0.565 -0.11,-0.836a10.672,10.672 0,0 0,-0.51 -1.813c-0.31,-0.825 -0.917,-2.006 -1.21,-2.799 -0.279,-0.659 -0.603,-1.316 -0.692,-2.035 -0.096,-0.686 -0.121,-1.468 0.012,-2.07 0.133,-0.602 0.301,-1.116 0.588,-1.576 0.286,-0.46 0.416,-0.585 0.674,-1.018 0.467,-0.77 0.94,-1.536 1.398,-2.31C8.568,1.69 8.961,0.866 9.215,0H0z"
+    android:strokeWidth=".014"
+    android:fillColor="#eac880" />
+  <path
+    android:pathData="M24,12.49c-0.46,0.052 -0.92,0.102 -1.379,0.155 -0.976,0.28 -1.61,0.468 -2.238,0.613 -1.182,0.331 -2.37,0.636 -3.547,0.982 -0.412,0.168 -0.805,0.378 -1.217,0.545 -1.427,0.629 -2.883,1.216 -4.406,1.569 -1.169,0.285 -2.34,0.553 -3.514,0.818 -0.57,0.132 -1.137,0.284 -1.693,0.469 -0.763,0.24 -1.526,0.476 -2.287,0.718 -0.352,0.128 -0.655,0.355 -0.987,0.522 -0.073,0.018 -0.161,0.078 -0.123,0.164 0.035,0.046 0.08,0.087 0.116,0.133 0.3,0.351 0.59,0.71 0.886,1.064 0.643,0.774 1.282,1.55 1.924,2.324 0.4,0.482 0.804,0.96 1.213,1.434H24V12.49z"
+    android:strokeWidth=".012"
+    android:fillColor="#f0a775" />
+  <path
+    android:pathData="M9.557,0C8.709,0.352 7.86,0.701 7.012,1.05c-0.94,0.625 -1.877,1.26 -2.815,1.89a2.366,2.366 0,0 0,-0.568 0.474c-0.673,0.685 -1.371,1.354 -2.03,2.049 0.68,0.091 1.365,0.116 2.047,0.16 0.895,0.032 1.797,0.056 2.686,-0.06 1.62,-0.278 3.17,-0.858 4.684,-1.485a8.47,8.47 0,0 0,1.205 -0.598c1.39,-0.779 2.81,-1.504 4.177,-2.324A14.589,14.589 0,0 0,18.084 0L9.557,0zM19.277,0c-0.384,0.425 -0.79,0.83 -1.228,1.201 -1.285,1.072 -2.968,1.403 -4.422,2.164 -1.538,0.837 -2.899,1.955 -4.227,3.086 -1.118,1.065 -2.204,2.16 -3.31,3.238a60.742,60.742 0,0 0,-1.637 2.22c-0.547,0.807 -1.145,1.594 -1.521,2.501 -0.405,0.916 -0.834,1.829 -1.203,2.756 0.967,-0.506 1.92,-1.05 2.876,-1.58 0.504,-0.3 1.039,-0.557 1.51,-0.904 0.936,-0.621 1.913,-1.18 2.865,-1.776 1.235,-0.777 2.503,-1.507 3.659,-2.4 2.104,-1.717 3.968,-3.701 5.91,-5.594 -0.023,0.065 -0.177,0.27 -0.252,0.387a30.793,30.793 0,0 0,-1.533 3.129,6.746 6.746,0 0,0 -0.586,2.373 21.873,21.873 0,0 0,-0.063 2.56c0.27,2.024 0.556,4.047 0.828,6.07l0.004,0.016c0.332,-0.265 0.627,-0.586 0.942,-0.877 1.121,-1.117 2.237,-2.277 3.015,-3.668 0.83,-1.528 1.416,-3.178 1.93,-4.836 0.23,-0.953 0.39,-1.925 0.596,-2.884 0.165,-0.894 0.412,-1.777 0.46,-2.688 0.047,-0.465 0.08,-0.93 0.11,-1.396L24,0h-4.723z"
+    android:strokeWidth=".011"
+    android:fillColor="#6f8fae" />
+  <path
+    android:pathData="M14.78,20.666c-0.5,0.028 -0.993,0.159 -1.462,0.33 -0.488,0.177 -0.963,0.393 -1.423,0.633 -0.751,0.433 -1.331,1.1 -1.84,1.789 -0.137,0.189 -0.26,0.387 -0.387,0.582h11.045c-0.078,-0.06 -0.166,-0.117 -0.242,-0.176 -1.016,-0.848 -1.996,-1.758 -3.15,-2.418 -0.631,-0.357 -1.314,-0.659 -2.042,-0.732a3.375,3.375 0,0 0,-0.5 -0.008z"
+    android:strokeWidth=".015"
+    android:fillColor="#f6bdac" />
+  <path
+    android:pathData="m7.982,17.107 l-0.283,0.065c-0.57,0.132 -1.137,0.284 -1.693,0.469 -0.763,0.24 -1.526,0.476 -2.287,0.718 -0.352,0.128 -0.655,0.355 -0.987,0.522 -0.073,0.018 -0.161,0.078 -0.123,0.164 0.035,0.046 0.08,0.087 0.116,0.133 0.3,0.351 0.59,0.71 0.886,1.064 0.643,0.774 1.282,1.55 1.924,2.324 0.327,0.394 0.66,0.783 0.992,1.172 0.128,-0.315 0.248,-0.632 0.364,-0.95 0.57,-1.618 0.968,-3.303 1.097,-5.015a7.92,7.92 0,0 0,-0.006 -0.666z"
+    android:strokeWidth=".014"
+    android:fillColor="#f48e77" />
+  <path
+    android:pathData="m9.164,0.162 l-2.152,0.889c-0.94,0.624 -1.877,1.259 -2.815,1.888a2.366,2.366 0,0 0,-0.568 0.475c-0.673,0.685 -1.371,1.354 -2.03,2.049 0.68,0.091 1.365,0.116 2.047,0.16 0.85,0.03 1.707,0.05 2.553,-0.049 0.19,-0.285 0.32,-0.44 0.528,-0.789 0.467,-0.77 0.94,-1.536 1.398,-2.31 0.415,-0.736 0.785,-1.506 1.04,-2.313zM5.65,10.272c-0.406,0.54 -0.806,1.086 -1.197,1.636 -0.547,0.808 -1.145,1.595 -1.521,2.502 -0.405,0.916 -0.834,1.829 -1.203,2.756 0.967,-0.506 1.92,-1.05 2.876,-1.58 0.504,-0.3 1.039,-0.557 1.51,-0.904 0.366,-0.243 0.739,-0.476 1.114,-0.705 -0.328,-0.795 -0.825,-1.79 -1.084,-2.493 -0.17,-0.4 -0.355,-0.8 -0.495,-1.213zM21.855,12.863c-0.553,0.159 -1.036,0.295 -1.472,0.395 -1.182,0.331 -2.37,0.636 -3.547,0.982 -0.192,0.078 -0.379,0.166 -0.566,0.254 0.223,1.646 0.451,3.291 0.673,4.938l0.004,0.015c0.332,-0.265 0.627,-0.586 0.942,-0.877 1.121,-1.117 2.237,-2.277 3.015,-3.668 0.359,-0.66 0.67,-1.343 0.951,-2.039z"
+    android:strokeWidth=".014"
+    android:fillColor="#2c3264" />
+</vector>
